security/authpol/01-allow-nothing.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-nothing
  namespace: bookinfo
spec:
  # This matches nothing, the action defaults to ALLOW if not specified.
  {}
