security/authpol/03-allow-reviews-v1.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
 name: allow-reviews
 namespace: bookinfo
spec:
 selector:
   matchLabels:
     app: reviews
     version: v1
 action: ALLOW
 rules:
 - from:
   - source:
       principals: ["cluster.local/ns/bookinfo/sa/bookinfo-productpage"]
