security/authpol/04-allow-ratings.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
 name: allow-ratings
 namespace: bookinfo
spec:
 selector:
   matchLabels:
     app: ratings
 action: ALLOW
 rules:
 - from:
   - source:
       principals: ["cluster.local/ns/bookinfo/sa/bookinfo-reviews"]
